--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BeeWatch - Production Monitoring</title>
+    <title>Pollination Monitor - Production System</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🐝</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🌸</text></svg>">
 </head>
 <body>
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <span class="bee-icon">🐝</span>
-                <h1>BeeWatch</h1>
+                <span class="bee-icon">🌸</span>
+                <h1>Pollination Monitor</h1>
                 <span class="status">PRODUCTION</span>
             </div>
             <ul class="nav-menu">
@@ -32,7 +32,7 @@
         <section id="dashboard" class="section active">
             <div class="container">
                 <div class="section-header">
-                    <h2>Production Monitoring Dashboard</h2>
+                    <h2>Live Pollination Monitoring</h2>
                     <div class="last-update">Last updated: <span id="lastUpdate">--:--</span></div>
                 </div>
 
@@ -49,7 +49,7 @@
                     <div class="metric-card">
                         <div class="metric-icon">🐝</div>
                         <div class="metric-content">
-                            <h3>Bee Detections</h3>
+                            <h3>Pollinator Detections</h3>
                             <div class="metric-value" id="totalDetections">--</div>
                             <div class="metric-change">Real detections only</div>
                         </div>
@@ -76,7 +76,7 @@
 
                 <div class="dashboard-content">
                     <div class="activity-section">
-                        <h3>Recent Bee Detections</h3>
+                        <h3>Recent Pollinator Activity</h3>
                         <div id="recentActivity" class="activity-list">
                             <div class="loading">No data yet - Deploy sensors to start monitoring</div>
                         </div>
@@ -113,7 +113,7 @@
                             </tr>
                         </thead>
                         <tbody id="detectionsBody">
-                            <tr><td colspan="5" class="loading">No detections yet - Deploy ML model for bee detection</td></tr>
+                            <tr><td colspan="5" class="loading">No detections yet - Deploy ML model for pollinator detection</td></tr>
                         </tbody>
                     </table>
                 </div>
